--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,6 +17,8 @@
           </div> <br>
           <div class="form-actions">
             <%= f.button :submit, "Sign up", :class=>"navbar-wagon-item navbar-wagon-button btn" %>
+          <div> <%= btn_facebook %></div>
+
           </div>
         <% end %>
       </div>
