--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
       <p>The perfect home. The perfect place. For cheap.</p>
       <div class="home-form">
         <form action="flats" class="form-inline" method='get'>
-          <input type="text" placeholder="Zipcode" name="zip" class="form-control input-lg">
+          <input required type="text" placeholder="Zipcode" name="zip" class="form-control input-lg">
           <select required placeholder="Category" name="category" class="form-control input-lg">
             <option value="" disabled selected >Category   </option>
             <option value="farm">castle</option>
@@ -13,8 +13,8 @@
             <option value="farm">farm</option>
             <option value="house">house</option>
           </select>
-          <input type="number" placeholder="Min. Price" name="min_price" class="form-control input-lg">
-          <input type="number" placeholder="Max. Price" name="max_price" class="form-control input-lg">
+          <input required type="number" placeholder="Min. Price" name="min_price" class="form-control input-lg">
+          <input required type="number" placeholder="Max. Price" name="max_price" class="form-control input-lg">
           <input type="submit" class="btn btn-danger btn-lg" value="Find Now">
         </form>
       </div>
