amazing feature in flatview when clicking on thumbnail

--- a/app/assets/stylesheets/pages/_flats.scss
+++ b/app/assets/stylesheets/pages/_flats.scss
@@ -72,3 +72,11 @@
 .thumbnail {
   height: 80px;
 }
+
+.thumbnail.active {
+  border: 1px solid $green;
+}
+
+.thumbnail:hover {
+  border: 1px solid $green;
+}
