background-position oin show

--- a/app/assets/stylesheets/pages/_flats.scss
+++ b/app/assets/stylesheets/pages/_flats.scss
@@ -29,6 +29,7 @@
 .flat-page-pic {
   height: 400px;
   background-size: cover;
+  background-position: 50%;
   display: flex;
   color: white;
   align-items: center;
