--- a/app/views/flats/edit.html.erb
+++ b/app/views/flats/edit.html.erb
@@ -1,14 +1,21 @@
-<%= @flat.title %>
 
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-    <div class="form-registration">
-    <div class="form-title">Add property </div>
-      <%= render 'flats/property_form' %>
+
+    <div class="">
+      <div>
+        <div class="col-xs-12 col-sm-6">
+        <div class="form-registration">
+        <div class="form-title">Add property </div>
+          <%= render 'flats/property_form' %>
+        </div>
+        </div>
+      </div>
+
+
     </div>
-    </div>
+
   </div>
 </div>
 
