--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -24,3 +24,13 @@
   left:10px;
  }
 }
+
+tag {
+    background-color: white;
+    font-size: 14px;
+    padding: 1px 15px 2px 15px;
+    border-radius: 15px;
+    border: 1px solid #DDDDDD;
+    font-weight: lighter;
+    margin: 0 2px;
+}
