--- a/app/views/flats/_filter_sidebar_mobile.html.erb
+++ b/app/views/flats/_filter_sidebar_mobile.html.erb
@@ -26,6 +26,11 @@
   </div>
 
   <div class="input-group input-group-sm input-decoration">
+    <span class="input-group-addon" id="sizing-addon3">Max price</span>
+    <input type="text" class="form-control" aria-describedby="sizing-addon3" name="max_price" id="max_price">
+  </div>
+
+  <div class="input-group input-group-sm input-decoration">
     <span class="input-group-addon" id="sizing-addon3">Rooms</span>
     <input type="text" class="form-control" aria-describedby="sizing-addon3" name="rooms" id="rooms">
   </div>
@@ -35,7 +40,9 @@
     <input type="text" class="form-control" aria-describedby="sizing-addon3" name="zip" id="zip">
   </div>
 
-  <input type="submit">
+  <div class="btn-group">
+    <input type="submit" class="navbar-wagon-button btn" value="Search">
+  </div>
 </form>
 
 
