--- a/app/views/flats/_filter_sidebar.html.erb
+++ b/app/views/flats/_filter_sidebar.html.erb
@@ -41,7 +41,7 @@
   </div>
 
   <div class="btn-group">
-    <input type="submit" class="btn btn-primary" value="Search">
+    <input type="submit" class="navbar-wagon-button btn" value="Search">
   </div>
 </form>
 
