--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -48,12 +48,12 @@
         <div class="col-xs-12 col-sm-4">
           <div class="flat-owner-contact">
             <h4>Contactez le propriétaire</h4>
-            <form action="#">
+            <%= form_tag(flat_send_email_to_owner(@flat), method: 'post') do %>
               <div class="form-group">
-                <textarea rows="10"></textarea>
+                <%= text_area_tag(:message, rows: '10') %>
               </div>
-              <button class="btn btn-primary">Envoyer votre message</button>
-            </form>
+              <%= submit_tag("Envoyer votre message") %>
+            <% end %>
           </div>
         </div>
       </div>
