--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -2,6 +2,11 @@
   <h1>Our suggestions</h1>
   <div class="row">
     <div class="col-xs-12 col-md-8">
+    <div>@user.latitude
+      <%= @user.latitude %>
+      @user.longitude
+      <%= @user.longitude %></div>
+
       <% if @flats.size == 0 %>
         <div class="no_result">
           <h2 class="h2-1">Nothing matches your search ...</h2>
