--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -54,6 +54,16 @@
               </div>
               <button class="btn btn-primary">Envoyer votre message</button>
             </form>
+<!-- TEST CALENDAR
+ -->
+
+<div class='calendar'></div>
+
+<!-- # TEST CALENDAR
+ -->
+
+
+
           </div>
         </div>
       </div>
