--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,10 @@
 
 
 
-  <%= javascript_include_tag "https://maps.google.com/maps/api/js?key=AIzaSyDANjx3bosEtIyzJaoWs50Wnt6nt_1rmxU" %>
+  <%= javascript_include_tag "https://maps.google.com/maps/api/js" %>
   <%= javascript_include_tag "https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/markerclusterer/src/markerclusterer_compiled.js" %>
   <%= javascript_include_tag "https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js" %>
+
   <%= javascript_include_tag "application", 'data-turbolinks-track': 'reload' %>
   <%= cloudinary_js_config %>
   <%= yield(:after_js) %>
