complete mail feature in show view for development mode

--- a/app/views/user_mailer/contact_flat_owner.html.erb
+++ b/app/views/user_mailer/contact_flat_owner.html.erb
@@ -1,5 +1,5 @@
-<h1>Bonjour <%= @owner.first_name %> <%= @owner.last_name %> </h1>
+<h1>Bonjour <%= @receiver.first_name %> <%= @receiver.last_name %> </h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/contact_flat_owner.html.erb
+  <%= @content %>
 </p>
