--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,3 +1,11 @@
+<% if flash[:notice] %>
+  <div class="container">
+    <div class="alert alert-success alert-dismissable">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      <%= flash[:notice] %>
+    </div>
+  </div>
+<% end %>
 <div class="wrapper-grey">
   <div class="container">
     <div class="flat-page-pic" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= photo_path_for(@flat) %>)">
@@ -48,11 +56,11 @@
         <div class="col-xs-12 col-sm-4">
           <div class="flat-owner-contact">
             <h4>Contactez le propriétaire</h4>
-            <%= form_tag(flat_send_email_to_owner(@flat), method: 'post') do %>
+            <%= form_tag(flat_send_email_to_owner_path(@flat), method: 'post') do %>
               <div class="form-group">
-                <%= text_area_tag(:message, rows: '10') %>
+                <%= text_area_tag :mail_content, nil, rows: '10' %>
               </div>
-              <%= submit_tag("Envoyer votre message") %>
+              <%= submit_tag "Envoyer votre message", class: "btn btn-primary btn-default" %>
             <% end %>
           </div>
         </div>
