add (ugly) form in flats#index view

--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -17,12 +17,8 @@
       </div>
       <div id="search-form">
         <h4>Refine your search</h4>
-        <div class="filter-form">
-
-        </div>
-      </div>
-      <div class="hidden-xs col-md-4" id="div_sidebar">
-        <div id="sidebar">
+        <div class="filter-form hidden-xs">
+          <%= render 'flats/filter_sidebar' %>
         </div>
       </div>
     </div>
