--- a/app/views/flats/_filter_sidebar.html.erb
+++ b/app/views/flats/_filter_sidebar.html.erb
@@ -1,46 +1,41 @@
 <form action="/flats" method="get">
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon1">Title</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon1" name="title" id="title" value=<%= params[:title]%>>
+  <div>
+    <label for="category">Category</label>
+    <input type="text" name="category">
   </div>
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Category</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="category" id="category" value=<%= params[:category]%>>
+  <div>
+    <label for="min_area">Min area</label>
+    <input type="number" name="min_area" id="min_area">
   </div>
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Min area</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="min_area" id="min_area" value=<%= params[:min_area]%>>
+   <div>
+    <label for="max_area">Max area</label>
+    <input type="number" name="max_area">
   </div>
 
-   <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Max area</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="max_area" id="max_area" value=<%= params[:max_area]%>>
+  <div>
+    <label for="min_price">Min price</label>
+    <input type="number" name="min_price" >
   </div>
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Min price</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="min_price" id="min_price" value=<%= params[:min_price]%>>
+  <div>
+    <label for="max_price">Max price</label>
+    <input type="number" name="max_price" >
   </div>
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Max price</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="max_price" id="max_price" value=<%= params[:max_price]%>>
+  <div>
+    <label for="rooms">Rooms</label>
+    <input type="number" name="rooms">
   </div>
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Rooms</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="rooms" id="rooms" value=<%= params[:rooms]%>>
+  <div>
+    <label for="zip">Zip</label>
+    <input type="text" name="zip">
   </div>
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Zip</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="zip" id="zip" value=<%= params[:zip]%>>
-  </div>
-
-  <div class="btn-group">
+  <div class="btn">
     <input type="submit" class="navbar-wagon-button btn" value="Search">
   </div>
 </form>
