--- a/app/views/flats/_property_form.html.erb
+++ b/app/views/flats/_property_form.html.erb
@@ -8,7 +8,38 @@
   <%= f.input :price, label: false, input_html: { :class => "input-form-session", placeholder:"price" } %>
   <%= f.input :rooms, label: false, input_html: { :class => "input-form-session", placeholder:"rooms" } %>
   <%= f.input :category, label: false, collection: Flat::CHOICE_CATEGORY, input_html: { :class => "input-form-session", placeholder:"category" } %>
-  <%= f.input :photos, as: :attachinary, label: false ,input_html: { :class => "navbar-wagon-item navbar-wagon-button btn",  multiple: true} %>
+  <%= f.input(
+        :photos,
+        as: :attachinary,
+        display: false ,
+        type:"file",
+        label:"Upload photos",
+        label_html: { :class => "navbar-wagon-item navbar-wagon-button btn" },
+        multiple: true
+      )
+  %>
 
   <%= f.button :submit, :class=>"navbar-wagon-item navbar-wagon-button btn" %>
 <% end %>
+
+
+<style>
+  input[type="file"] {
+      display: none;
+  }
+
+  .attachinary_container ul{
+    margin : 25px 0px 15px 0px;
+    display: inline-block;
+    list-style-type: none;
+    }
+
+  .attachinary_container li{
+   display: inline;
+   text-align: center;
+   padding: 2px ;
+   margin: 0;
+   width: 19%;
+   }
+</style>
+
