--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -34,9 +34,14 @@
   padding: 10px;
   margin-top: 10px;
   h4 {
+    font-weight: bold;
     font-size: 16px;
     margin-top: 0;
     margin-bottom: 0;
+  }
+  hr {
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
 
