--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -26,7 +26,7 @@
       <div id="results-map">
         <h4>Around you</h4>
         <div class="gmap-content">
-          <div id="map" style="width: 100%; height: 100px;">
+          <div id="map" style="width: 100%; height: 300px; border-radius: 2px;">
           </div>
         </div>
       </div>
@@ -66,4 +66,26 @@
     </div>
   </div>
 </div>
+
+<% content_for(:after_js) do %>
+  <%= javascript_tag do %>
+    $(document).ready(function() {
+      var handler = Gmaps.build('Google');
+      handler.buildMap({ internal: { id: 'map' } }, function() {
+        markers = handler.addMarkers(<%= raw @hash.to_json %>);
+        markers.forEach(function(marker){
+        marker.label = "Hello World!";
+        console.log(marker.title)
+        })
+        handler.bounds.extendWith(markers);
+        handler.fitMapToBounds();
+        if (markers.length == 0) {
+          handler.getMap().setZoom(2);
+        } else if (markers.length == 1) {
+          handler.getMap().setZoom(14);
+        }
+      });
+    });
+  <% end %>
+<% end %>
 
