form display css done

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,8 +1,9 @@
 
 .card {
   background-size: cover !important;
-  height: 275px;
-  margin:15px auto;
+  height: 250px;
+  width: 375px;
+  margin:15px;
   position: relative;
 }
 
@@ -59,13 +60,14 @@
 .card-wraper{
 
   box-shadow: 1px 1px 2px #DDD;
+  background-color: #FFF;
   transition: box-shadow 0.5s;
   margin-top: 30px;
-  padding-bottom: 10px;
+  padding: 10px;
   &:hover{
     box-shadow: 2px 2px 3px #BBB;
   }
-  margin-bottom: 30px;
+  margin-bottom: 0px;
 }
 
 .card-flex{
@@ -74,6 +76,41 @@
   align-items: flex-end;
 }
 
+.card-flex-start{
+  display: flex;
+  align-items: center;
+}
 
+.nav-flex{
+  display:flex;
+  justify-content:space-around;
+  margin-top: 40px;
+  div{
+    margin-bottom:0px;
+    font-size: 20px;
+    height: 50px;
+    width: 300px;
+    background-color:#FFF;
+    text-align:center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 2px 2px 3px 1px rgba(0, 0, 0, 0.1);
+    transition: background-color ease 0.4s;
+    &:hover{
+      background-color:#F1F1F1;
+    }
+  }
+}
+.nav-flex a{
+  text-decoration:none;
+  color:black;
+}
 
+.hidden{
+  display:none;
+}
 
+#active{
+  background-color: #F1F1F1;
+}
