--- a/app/views/flats/edit.html.erb
+++ b/app/views/flats/edit.html.erb
@@ -1,10 +1,11 @@
+<%= render 'shared/nav-profile' %>
 
 <div class="container">
   <div class="row">
 
     <div class="">
       <div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-sm-6 col-sm-offset-3">
         <div class="form-registration">
         <div class="form-title">Add property </div>
           <%= render 'flats/property_form' %>
