--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -1,8 +1,11 @@
+<%= render 'shared/nav-profile' %>
+
+
+
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="form-registration">
-    <div class="form-title">Add property </div>
       <%= render 'flats/property_form' %>
     </div>
     </div>
