--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,34 +1,43 @@
 <% flats = current_user.flats.sort_by { |flat| flat[:updated_at]}.reverse %>
 
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="head-user">
-        <p> Bonjour <%= current_user.first_name %> </p>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render 'shared/nav-profile' %>
 
-
-<div class="container">
-  <div class="row">
-    <div class="cards">
-      <% flats.each do |flat| %>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-wraper">
+<div id="flats" class="">
+  <div class="container">
+    <% flats.each do |flat| %>
+    <div class="row">
+      <div class="card-wraper">
+        <div class="card-flex-start">
           <div class = "card" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
           url('<%= photo_path_for(flat) %>')">
-            <p class="card-title"> <%= flat.title %> </p>
-            <%= link_to '', flat_path(flat.id), class: 'card-link' %>
-          </div>
-          <div class="card-flex">
-            <%= link_to "Delete", flat_path(flat), method: :delete, :class=>"navbar-wagon-item navbar-wagon-button btn" %>
-            <%= link_to "Edit", edit_flat_path(flat), :class=>"navbar-wagon-item navbar-wagon-button btn" %>
-          </div>
+          <p class="card-title"> <%= flat.title %> </p>
+          <%= link_to '', flat_path(flat.id), class: 'card-link' %>
         </div>
+        <div>
+          <p> <%= flat.description %> </p>
+          <p> <%= flat.price %> </p>
+          <p> <%= flat.address %> </p>
+        </div>
+
+
       </div>
-      <% end %>
+      <div class="card-flex">
+        <%= link_to "Delete", flat_path(flat), method: :delete, :class=>"navbar-wagon-item navbar-wagon-button btn" %>
+        <%= link_to "Edit", edit_flat_path(flat), :class=>"navbar-wagon-item navbar-wagon-button btn" %>
+      </div>
     </div>
+    <% end %>
   </div>
 </div>
+</div>
+</div>
+
+
+<script>
+  $(function() {
+    $('#show').on("click", function() {
+      $('#flats').toggleClass('hidden');
+
+    });
+  });
+</script>
