--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-xs-12 col-md-3">
       <div id="active-filters-list">
-        <h4>Current selection</h4>
-        <div class="active-filter-list-content hidden-xs">
+        <h4 class="accordion">Current selection</h4>
+        <div class="active-filter-list-content hidden-xs panel-custom">
           <% if @filters.size > 0 %>
             <ul class="list-unstyled">
               <% @filters.each do |filter, value| %>
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div id="search-form">
-        <h4>Refine your search</h4>
+        <h4 class="accordion">Refine your search</h4>
         <div class="filter-form hidden-xs">
           <%= render 'flats/filter_sidebar' %>
         </div>
