map-cads implemented

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -36,3 +36,17 @@ tag {
     font-weight: lighter;
     margin: 0 2px;
 }
+
+.inmap {
+  height: 80px;
+  margin: 0;
+  text-align: center;
+}
+
+.infowindowlink {
+  margin-bottom: 5px;
+}
+
+.inmaptitle {
+  margin-bottom: 2px;
+}
