--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -48,10 +48,9 @@
       var handler = Gmaps.build('Google');
       handler.buildMap({ internal: { id: 'map' } }, function() {
         markers = handler.addMarkers(<%= raw @hash.to_json %>);
-        markers.forEach(function(marker){
-        marker.label = "Hello World!";
-        console.log(marker.title)
-        })
+        markers.forEach(function(marker) {
+        google.maps.event.trigger(marker.getServiceObject(), 'click');
+        });
         handler.bounds.extendWith(markers);
         handler.fitMapToBounds();
         if (markers.length == 0) {
