fix petouille in flats#show view + format price in homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
                 </div>
                 <div class="card-body">
                   <h3><%= flat.title %></h3>
-                  <p><%= flat.price %> €</p>
+                  <p><%= number_with_delimiter(flat.price, delimiter: " ", separator: ",") %> €</p>
                 </div>
               <% end %>
             </div>
